--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <span class="tooltip">GitHub Profile</span>
                     </a> and
                     <a href="https://github.com/itsme442" target="_blank"
-                        onmouseover="showTooltip(event, 'https://github.com/elias')">Elias
+                        onmouseover="showTooltip(event, 'https://github.com/Zemicahel')">Zemicahel 
                         <span class="tooltip">GitHub Profile</span>
                     </a>
                 </p>
